# fbpage-mm-bridge

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.nginx  Dockerfile.test  LICENSE  README.md  deny.toml  deploy.sh  docker-bake.hcl  docker-compose.test.yml  docker-compose.yml
.github/: ISSUE_BUILD_CACHE.md
.github/workflows/: CICD.yml  ci.yml  deploy-mattermost.yml
docs/: FACEBOOK_LONG_LIVED_TOKEN.md
nginx/: nginx.conf  webhook.conf.tpl
scripts/: bootstrap-mm.sh  deploy.sh  migrate-bots.sh  setup-nginx-ssl.sh  update-env.py
scripts/update-env/: Cargo.toml
scripts/update-env/src/: main.rs
services/customer-service/: .env.example  Cargo.toml  Dockerfile
services/customer-service/migrations/: 001_create_customers.sql
services/customer-service/src/: config.rs  db.rs  lib.rs  main.rs  models.rs
services/customer-service/src/handlers/: mod.rs
services/customer-service/tests/: integration_test.rs
services/customer-service/tests/common/: mod.rs
services/facebook-graph-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
services/facebook-graph-service/migrations/: 001_create_facebook_rate_limits.sql  002_create_mattermost_cache.sql  003_create_media_download_jobs.sql  003_create_posted_message_ids.sql  004_create_posted_message_ids.sql  005_create_mm_bypass_audit.sql  006_create_mm_bypass_audit_idempotency_index.sql  007_drop_duplicate_mm_bypass_audit_index.sql
services/facebook-graph-service/src/: auth.rs  config.rs  db.rs  graph_api.rs  lib.rs  main.rs  media.rs  media_worker.rs  models.rs  poll.rs
services/facebook-graph-service/src/handlers/: mm_admin.rs  mod.rs
services/facebook-graph-service/src/services/: customer_client.rs  mattermost_client.rs  mattermost_db.rs  mattermost_ops.rs  message_client.rs  mod.rs
services/facebook-graph-service/src/storage/: mod.rs
services/facebook-graph-service/tests/: admin_api_security_test.rs  integration_test.rs  mm_bypass_schema_test.rs  unit_tests.rs
services/message-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
services/message-service/migrations/: 001_create_messages.sql  002_create_message_attachments.sql
services/message-service/src/: config.rs  db.rs  lib.rs  main.rs  models.rs
services/message-service/src/handlers/: mod.rs
services/message-service/src/services/: customer_client.rs  mod.rs
services/message-service/tests/: integration_test.rs
services/message-service/tests/common/: mod.rs
services/mm-bridge-bot/: Cargo.toml  Dockerfile
services/mm-bridge-bot/src/: main.rs
services/shared-utils/: Cargo.toml
services/shared-utils/src/: lib.rs
services/webhook-gateway/: Cargo.toml  Dockerfile
services/webhook-gateway/src/: config.rs  lib.rs  main.rs
services/webhook-gateway/src/handlers/: mod.rs
src/: main.rs
utils/: integration-test.sh
