[package]
name = "fbpage-mm-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Bridge Facebook Page messages to Mattermost"

[workspace]
members = [
    "services/customer-service",
    "services/message-service",
    "services/facebook-graph-service",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.42", features = ["macros", "net", "time", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
envy = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "=0.6.4"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }

# Pin transitive dependencies to avoid edition2024 issues
getrandom = "=0.2.15"
tempfile = "=3.14.0"
rustix = "=0.38.42"
base64ct = "=1.6.0"
home = "=0.5.9"
wit-bindgen = "=0.46.0"
wiremock = "=0.6.4"

[target.'cfg(target_os = "macos")'.dependencies]
native-tls = "=0.2.12"
security-framework = "=2.11.1"

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
