[workspace]
members = [
    "services/customer-service",
    "services/message-service",
    "services/facebook-graph-service",
]
resolver = "3"

[workspace.package]
authors = ["FBPage-MM-Bridge Team"]
license = "MIT"
edition = "2021"
rust-version = "1.83"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.42", features = ["macros", "net", "time", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
envy = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "=0.6.4"
home = "=0.5.9"

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
