[package]
name = "customer-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Customer Service - Manages customer identity, profiles, and platform mappings"
authors = ["FBPage-MM-Bridge Team"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared-utils = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
