[package]
name = "message-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Message Service - Stores and manages messages from Facebook Graph API"
authors = ["FBPage-MM-Bridge Team"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
